--- a/vscode-theme-to-monaco-theme-web/package.json
+++ b/vscode-theme-to-monaco-theme-web/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
     "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "webpack-merge": "^5.8.0"
   }
 }
